# hdl_global_localization

./: CMakeLists.txt  package.xml
config/: hdl_global_localization.config.yaml
include/hdl_global_localization/: hdl_global_localization_component.hpp
include/hdl_global_localization/bbs/: bbs_localization.hpp  occupancy_gridmap.hpp
include/hdl_global_localization/engines/: global_localization_bbs.hpp  global_localization_fpfh_ransac.hpp  global_localization_fpfh_teaser.hpp
include/hdl_global_localization/ransac/: ransac_pose_estimation.hpp
launch/: hdl_global_localization.launch.py
src/: hdl_global_localization_component.cpp  main.cpp
src/hdl_global_localization/bbs/: bbs_localization.cpp
src/hdl_global_localization/engines/: global_localization_bbs.cpp  global_localization_fpfh_ransac.cpp  global_localization_fpfh_teaser.cpp
src/hdl_global_localization/ransac/: ransac_pose_estimation.cpp
